# QT_musicplayer

./: README.md
ass_qt_01/: CMakeLists.txt  Resource.qrc  customimage.cpp  customimage.h  main.cpp  musicload.cpp  musicload.h
